Continue writing and adding figures.
Expanded lit review; added figures for LTC proportions; add to the
summary table.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -21,6 +21,17 @@
               Panagiotis Manolitzas and Nikolaos Matsatsinis",
 }
 
+@article{HW2006,
+    author = {Harper, Paul and Winslett, David},
+    year = {2006},
+    pages = {146-156},
+    title = {Classification trees: A possible method for maternity risk
+             grouping},
+    volume = {169},
+    journal = {European Journal of Operational Research},
+    doi = {10.1016/j.ejor.2004.05.014}
+}
+
 @article{VMD2016,
     author = {Vuik, Sabine and Mayer, Erik and Darzi, Ara},
     year = {2016},
@@ -45,18 +56,6 @@
     doi = {10.1377/hlthaff.2015.1311},
 }
 
-@article{YKTT+12018,
-    title = {A systematic review of the clinical application of data-driven
-             population segmentation analysis},
-    journal = {BMC Medical Research Methodology},
-    volume = {18},
-    number = {121},
-    year = {2018},
-    doi = {https://doi.org/10.1186/s12874-018-0584-9},
-    author = {Shi Yan and Yu Heng Kwan and Chuen Seng Tan and Julian Thumboo and
-              Lian Leng Low},
-}
-
 @article{YSKT+42019,
     title = {Identifying heterogeneous health profiles of primary care utilizers
              and their differential healthcare utilization and mortality – a
@@ -69,3 +68,19 @@
     author = {Shi Yan and Benjamin Jun Jie Seng and Yu Heng Kwan and Chuen Seng
               Tan and Joanne Hui Min Quah and Julian Thumboo and Lian Leng Low},
 }
+
+@article{YGHT+12020,
+    title = {Identifying Optimal Indicators and Purposes of Population
+             Segmentation Through Engagement of Key Stakeholders: A Qualitative
+             Study},
+    journal = {Health Res Policy Syst.},
+    volume = {18},
+    number = {1},
+    pages = {26},
+    year = {2020},
+    doi = {10.1186/s12961-019-0519-x},
+    author = {Sungwon Yoon and Hendra Goh and Yu Heng Kwan and Julian Thumboo
+              and Lian Leng Low},
+}
+
+
