--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass[12pt]{article}
 
 % Setting up the page
 \usepackage{fullpage}
@@ -19,7 +19,7 @@
 
 % Custom lengths
 \newlength{\imgwidth}
-\setlength{\imgwidth}{.9\textwidth}
+\setlength{\imgwidth}{.96\textwidth}
 \newlength{\halfimgwidth}
 \setlength{\halfimgwidth}{.5\imgwidth}
 
