--- a/tex/summary.tex
+++ b/tex/summary.tex
@@ -1,39 +1,41 @@
 \begin{tabular}{llrrrrr}
 \toprule
-               &           & Cluster &         &         &         & Population (mean) \\
-               &           &       0 &       1 &       2 &       3 &                   \\
+               &        &  Cluster &          &          &           & Population (mean) \\
+               &        &        0 &        1 &        2 &         3 &                   \\
 \midrule
-\textbf{Characteristics} & \textbf{COPD admissions in last year, mean} &    1.91 &    1.51 &    1.31 &    1.98 &              1.29 \\
-               & \textbf{Min. LOS, mean} &   12.82 &   -0.00 &   -0.02 &   48.82 &              5.41 \\
-               & \textbf{Mean LOS, mean} &   25.30 &    6.45 &    3.79 &   74.65 &              7.47 \\
-               & \textbf{Max. LOS, mean} &   51.36 &   30.86 &   16.94 &  224.93 &             10.40 \\
-               & \textbf{No. of LTCs, mean} &    2.05 &    3.10 &    1.47 &    2.70 &              2.00 \\
-               & \textbf{Median no. ICDs, mean} &    9.00 &    8.00 &    5.00 &   11.00 &              6.58 \\
-               & \textbf{Median CCI, mean} &    9.00 &   20.00 &    4.00 &   18.00 &              9.72 \\
-\textbf{Intervention prevalence} & \textbf{None, \%} &   80.26 &   83.40 &   65.76 &   89.81 &             70.95 \\
-               & \textbf{Pulmonary rehab., \%} &   15.77 &   13.41 &   27.96 &    8.92 &             23.66 \\
-               & \textbf{Spec. nursing, \%} &    3.78 &    2.91 &    4.63 &    1.27 &              4.16 \\
-               & \textbf{Both, \%} &    0.18 &    0.29 &    1.66 &    0.00 &              1.22 \\
-\textbf{LTC prevalence} & \textbf{Acute myocardial infection, \%} &   14.35 &   23.42 &   10.86 &   16.56 &             14.28 \\
-               & \textbf{Cerebrovascular accident, \%} &    9.65 &   15.01 &    1.21 &   19.21 &              5.85 \\
-               & \textbf{Congestive heart failure, \%} &   14.47 &   54.62 &    0.00 &   27.15 &             14.83 \\
-               & \textbf{Connective tissue disorder, \%} &    5.18 &    5.07 &    4.01 &    4.64 &              4.42 \\
-               & \textbf{Dementia, \%} &    7.53 &   20.08 &    0.00 &   25.17 &              6.10 \\
-               & \textbf{Diabetes, \%} &   20.12 &   28.70 &   16.71 &   25.83 &             20.07 \\
-               & \textbf{Liver disease, \%} &    0.35 &    0.56 &    0.33 &    0.00 &              0.37 \\
-               & \textbf{Peptic ulcer, \%} &    1.76 &    1.04 &    0.35 &    1.32 &              0.72 \\
-               & \textbf{Peripheral vascualar disease, \%} &    5.06 &    8.90 &    3.18 &    5.96 &              4.78 \\
-               & \textbf{Pulmonary disease, \%} &  100.00 &  100.00 &  100.00 &  100.00 &            100.00 \\
-               & \textbf{Cancer, \%} &    8.12 &   13.69 &    4.11 &   10.60 &              6.94 \\
-               & \textbf{Diabetic complications, \%} &    0.24 &    0.69 &    0.33 &    1.99 &              0.44 \\
-               & \textbf{Paraplegia, \%} &    1.29 &    3.96 &    0.25 &    0.66 &              1.23 \\
-               & \textbf{Renal disease, \%} &    8.59 &   22.52 &    3.02 &   18.54 &              8.50 \\
-               & \textbf{Metastatic cancer, \%} &    1.88 &    5.70 &    0.00 &    0.66 &              1.54 \\
-               & \textbf{Severe liver disease, \%} &    0.24 &    0.63 &    0.00 &    0.00 &              0.17 \\
-               & \textbf{HIV, \%} &    0.00 &    0.00 &    0.03 &    0.00 &              0.02 \\
-               & \textbf{C. diff, \%} &    0.82 &    0.14 &    0.03 &    0.66 &              0.17 \\
-               & \textbf{MRSA, \%} &    0.35 &    0.07 &    0.05 &    1.32 &              0.12 \\
-               & \textbf{Obesity, \%} &    2.82 &    3.75 &    2.22 &    7.95 &              2.78 \\
-               & \textbf{Sepsis, \%} &    2.12 &    1.25 &    0.25 &    1.99 &              0.76 \\
+\textbf{Characteristics} & \textbf{Mean spell cost} &  8083.69 &  2312.39 &  1509.22 &  17847.80 &           2280.54 \\
+               & \textbf{Mean age} &    76.15 &    77.16 &    71.01 &     81.36 &             72.22 \\
+               & \textbf{COPD adm. in last year} &     1.91 &     1.51 &     1.31 &      1.98 &              1.29 \\
+               & \textbf{Min. LOS} &    12.82 &    -0.00 &    -0.02 &     48.82 &              5.41 \\
+               & \textbf{Mean LOS} &    25.30 &     6.45 &     3.79 &     74.65 &              7.47 \\
+               & \textbf{Max. LOS} &    51.36 &    30.86 &    16.94 &    224.93 &             10.40 \\
+               & \textbf{No. of LTCs} &     2.05 &     3.10 &     1.47 &      2.70 &              2.00 \\
+               & \textbf{Median no. ICDs} &     9.00 &     8.00 &     5.00 &     11.00 &              6.58 \\
+               & \textbf{Median CCI} &     9.00 &    20.00 &     4.00 &     18.00 &              9.72 \\
+\textbf{Intervention prevalence} & \textbf{None, \%} &    80.26 &    83.40 &    65.76 &     89.81 &             70.95 \\
+               & \textbf{Pulmonary rehab., \%} &    15.77 &    13.41 &    27.96 &      8.92 &             23.66 \\
+               & \textbf{Spec. nursing, \%} &     3.78 &     2.91 &     4.63 &      1.27 &              4.16 \\
+               & \textbf{Both, \%} &     0.18 &     0.29 &     1.66 &      0.00 &              1.22 \\
+\textbf{LTC prevalence} & \textbf{Pulmonary disease, \%} &   100.00 &   100.00 &   100.00 &    100.00 &            100.00 \\
+               & \textbf{Diabetes, \%} &    20.12 &    28.70 &    16.71 &     25.83 &             20.07 \\
+               & \textbf{CHF, \%} &    14.47 &    54.62 &     0.00 &     27.15 &             14.83 \\
+               & \textbf{AMI, \%} &    14.35 &    23.42 &    10.86 &     16.56 &             14.28 \\
+               & \textbf{Renal disease, \%} &     8.59 &    22.52 &     3.02 &     18.54 &              8.50 \\
+               & \textbf{Cancer, \%} &     8.12 &    13.69 &     4.11 &     10.60 &              6.94 \\
+               & \textbf{Dementia, \%} &     7.53 &    20.08 &     0.00 &     25.17 &              6.10 \\
+               & \textbf{CVA, \%} &     9.65 &    15.01 &     1.21 &     19.21 &              5.85 \\
+               & \textbf{PVD, \%} &     5.06 &     8.90 &     3.18 &      5.96 &              4.78 \\
+               & \textbf{CTD, \%} &     5.18 &     5.07 &     4.01 &      4.64 &              4.42 \\
+               & \textbf{Obesity, \%} &     2.82 &     3.75 &     2.22 &      7.95 &              2.78 \\
+               & \textbf{Metastatic cancer, \%} &     1.88 &     5.70 &     0.00 &      0.66 &              1.54 \\
+               & \textbf{Paraplegia, \%} &     1.29 &     3.96 &     0.25 &      0.66 &              1.23 \\
+               & \textbf{Sepsis, \%} &     2.12 &     1.25 &     0.25 &      1.99 &              0.76 \\
+               & \textbf{Peptic ulcer, \%} &     1.76 &     1.04 &     0.35 &      1.32 &              0.72 \\
+               & \textbf{Diabetic compl., \%} &     0.24 &     0.69 &     0.33 &      1.99 &              0.44 \\
+               & \textbf{Liver disease, \%} &     0.35 &     0.56 &     0.33 &      0.00 &              0.37 \\
+               & \textbf{Severe liver disease, \%} &     0.24 &     0.63 &     0.00 &      0.00 &              0.17 \\
+               & \textbf{C. diff, \%} &     0.82 &     0.14 &     0.03 &      0.66 &              0.17 \\
+               & \textbf{MRSA, \%} &     0.35 &     0.07 &     0.05 &      1.32 &              0.12 \\
+               & \textbf{HIV, \%} &     0.00 &     0.00 &     0.03 &      0.00 &              0.02 \\
 \bottomrule
 \end{tabular}
