Add further images.

--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -97,9 +97,19 @@ March 2019 totalling 10,881 spells.
 
 \begin{figure}
     \centering
-    \includegraphics[width=\imgwidth]{cluster_ltcs}
-    \caption{Proportions of number of LTCs presented by patients per
-    cluster}\label{fig:cluster_ltcs}
+    \begin{subfigure}{\halfimgwidth}
+        \includegraphics[width=\linewidth]{cluster_ltcs}
+        \caption{}\label{fig:cluster_ltcs}
+    \end{subfigure}\hfill%
+    \begin{subfigure}{\halfimgwidth}
+        \includegraphics[width=\linewidth]{intervention_ltcs}
+        \caption{}\label{fig:intervention_ltcs}
+    \end{subfigure}
+    \caption{%
+        Proportions of concurrent LTC counts presented by patients by
+        (\subref{fig:cluster_ltcs}) cluster and (\subref{fig:intervention_ltcs})
+        intervention
+    }\label{fig:ltcs}
 \end{figure}
 
 \begin{figure}
