--- a/tex/summary.tex
+++ b/tex/summary.tex
@@ -5,11 +5,11 @@
 \midrule
 \textbf{Characteristics} & \textbf{Mean spell cost} &  8083.69 &  2312.39 &  1509.22 &  17847.80 &           2280.54 \\
                & \textbf{Mean age} &    76.15 &    77.16 &    71.01 &     81.36 &             72.22 \\
-               & \textbf{COPD adm. in last year} &     1.91 &     1.51 &     1.31 &      1.98 &              1.29 \\
+               & \textbf{Mean COPD adm. in year} &     1.91 &     1.51 &     1.31 &      1.98 &              1.29 \\
                & \textbf{Min. LOS} &    12.82 &    -0.00 &    -0.02 &     48.82 &              5.41 \\
                & \textbf{Mean LOS} &    25.30 &     6.45 &     3.79 &     74.65 &              7.47 \\
                & \textbf{Max. LOS} &    51.36 &    30.86 &    16.94 &    224.93 &             10.40 \\
-               & \textbf{No. of LTCs} &     2.05 &     3.10 &     1.47 &      2.70 &              2.00 \\
+               & \textbf{Median no. of LTCs} &     2.00 &     3.00 &     1.00 &      3.00 &              2.00 \\
                & \textbf{Median no. ICDs} &     9.00 &     8.00 &     5.00 &     11.00 &              6.58 \\
                & \textbf{Median CCI} &     9.00 &    20.00 &     4.00 &     18.00 &              9.72 \\
 \textbf{Intervention prevalence} & \textbf{None, \%} &    80.26 &    83.40 &    65.76 &     89.81 &             70.95 \\
