Finish lit review of segmentation; gather refs.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,28 +1,101 @@
-@article{AG2018,
+@article{Arnolds2018,
     title = {Improving hospital layout planning through clinical pathway
              mining},
     journal = {Annals of Operations Research},
     volume = {263},
     pages = {453 - 477},
     year = {2018},
-    doi = {https://doi.org/10.1007/s10479-017-2485-4},
+    doi = {10.1007/s10479-017-2485-4},
     author = {Ines Verena Arnolds and Daniel Gartner},
 }
 
-@article{DDGM+12015,
+@article{Curley2017,
+    title = {Dealing with Missing Data: A Comparative Exploration of Approaches
+             Using the Integrated City Sustainability Database},
+    year = {2017},
+    volume = {55},
+    number = {2},
+    pages = {591-615},
+    journal = {Urban Affairs Review},
+    doi = {10.1177/1078087417726394},
+    author = {Cali Curley and Rachel M. Krause and Richard Feiock and
+              Christopher V. Hawkins},
+}
+
+@article{Delias2015,
     title = "Supporting healthcare management decisions via robust clustering of
              event logs",
     journal = "Knowledge-Based Systems",
     volume = "84",
     pages = "203 - 213",
     year = "2015",
-    doi = "https://doi.org/10.1016/j.knosys.2015.04.012",
+    doi = "10.1016/j.knosys.2015.04.012",
     author = "Pavlos Delias and Michael Doumpos and Evangelos Grigoroudis and
               Panagiotis Manolitzas and Nikolaos Matsatsinis",
 }
 
-@article{HW2006,
-    author = {Harper, Paul and Winslett, David},
+@article{Djabali2018,
+    author = {Djabali, Yasmina and Rabta, Boualem and Aissani, Djamil},
+    year = {2018},
+    month = {06},
+    pages = {507 - 531},
+    title = {Approximating Service-time Distributions by Phase-type
+             Distributions in Single-server Queues: A Strong Stability
+             Approach},
+    volume = {12},
+    journal = {International Journal of Mathematics in Operational Research},
+    doi = {10.1504/IJMOR.2018.10005095},
+}
+
+@article{Erlang1917,
+    title = {Solution of some problems in the theory of probabilities of
+             significance in automatic telephone exchanges},
+    author = {Erlang, Agner Krarup},
+    journal = {Post Office Electrical Engineer's Journal},
+    volume = {10},
+    pages = {189-197},
+    year = {1917},
+}
+
+@article{Erlang1920,
+    title = {Telephone waiting times},
+    author = {Erlang, Agner Krarup},
+    journal = {Matematisk Tidsskrift, B},
+    volume = {31},
+    pages = {25},
+    year = {1920},
+}
+
+@book{Everitt2011,
+    title = {Cluster analysis},
+    author = {Everitt, Brian S and Landau, Sabine and Leese, Morven and Stahl,
+              Daniel},
+    year = {2011},
+    publisher = {John Wiley \& Sons},
+}
+
+@article{Goldenshluger2016,
+    title = {Nonparametric estimation of the service time distribution in the
+             {M/G/$\infty$} queue},
+    year = {2016},
+    volume = {48},
+    number = {4},
+    pages = {1117-1138},
+    journal = {Advances in Applied Probability},
+    doi = {10.1017/apr.2016.67},
+    author = {Alexander Goldenshluger},
+}
+
+@book{Hagenaars2002,
+    title = {Applied Latent Class Analysis},
+    doi = {10.1017/CBO9780511499531},
+    publisher = {Cambridge University Press},
+    year = {2002},
+    author = {Jacques A. Hagenaars},
+}
+
+@article{Harper2006,
+    author = {Harper, Paul R. and Winslett, David},
     year = {2006},
     pages = {146-156},
     title = {Classification trees: A possible method for maternity risk
@@ -32,8 +105,125 @@
     doi = {10.1016/j.ejor.2004.05.014}
 }
 
-@article{VMD2016,
-    author = {Vuik, Sabine and Mayer, Erik and Darzi, Ara},
+@article{Houben2019,
+    title = {Revealing Methodological Challenges in Chronic Obstructive
+             Pulmonary Disease Studies Assessing Comorbidities: A Narrative
+             Review},
+    year = {2019},
+    volume = {6},
+    number = {2},
+    pages = {166-177},
+    journal = {Chronic Obstructive Pulmonary Diseases: Journal of the COPD
+               Foundation},
+    doi = {10.15326/jcopdf.6.2.2018.0145},
+    author = {Sarah Houben-Wilke and Filip J. J. Triest and Frits M.E.  Franssen
+              and Daisy J.A. Janssen and Emiel F.M.  Wouters and Lowie E.G.W.
+              Vanfleteren},
+}
+
+@incollection{Kumar2010,
+    author = {Kumar, Dinesh and Tantawi, Asser and Zhang, Li},
+    year = {2010},
+    chapter = {3},
+    pages = {45-71},
+    title = {Estimating Model Parameters of Adaptive Software Systems in
+             Real-Time},
+    editor = {Ardagna, Danilo and Zhang, Li},
+    booktitle = {Run-time Models for Self-managing Systems and Applications},
+    doi = {10.1007/978-3-0346-0433-8_3}
+}
+
+@article{Kuwornu2014,
+    title = {Multimorbidity Disease Clusters in {Aboriginal} and
+             {non-Aboriginal} {Caucasian} Populations in {Canada}},
+    year = {2014},
+    volume = {34},
+    number = {4},
+    pages = {218-225},
+    journal = {Chronic Diseases and Injuries in Canada},
+    doi = {}, 
+    author = {J P Kuwornu and L M Lix and S Shooshtari},
+}
+
+@article{Larsen2017,
+    title = {A Latent Class Analysis of Multimorbidity and the Relationship to
+             Socio-Demographic Factors and Health-Related Quality of Life. A
+             National Population-Based Study of 162,283 {Danish} Adults},
+    year = {2017},
+    volume = {12},}
+    number = {1},
+    journal = {PLoS One},
+    doi = {10.1371/journal.pone.0169426},
+    author = {Finn Breinholt Larsen and Marie Hauge Pedersen and Karina Friis
+              and Charlotte Gl\"{u}mer and Mathias Lasgaard},
+}
+
+@book{Lazarsfeld1968,
+    title = {Latent structure analysis},
+    author = {Lazarsfeld, Paul Felix and Henry, Neil W},
+    year = {1968},
+    publisher = {Houghton Mifflin Co.},
+}
+
+@article{Newman2014,
+    title = {Missing Data: Five Practical Guidelines},
+    year = {2014},
+    volume = {17},
+    number = {4},
+    pages = {372-411},
+    journal = {Organizational Research Methods},
+    doi = {10.1177/1094428114548590},
+    author = {Daniel A. Newman},
+}
+
+@article{Olafsson2008,
+    title = "Operations research and data mining",
+    journal = "European Journal of Operational Research",
+    volume = "187",
+    number = "3",
+    pages = "1429 - 1448",
+    year = "2008",
+    doi = "https://doi.org/10.1016/j.ejor.2006.09.023",
+    author = "Sigurdur Olafsson and Xiaonan Li and Shuning Wu",
+}
+
+@article{Palmer2018,
+    title = "Modelling deadlock in open restricted queueing networks",
+    journal = "European Journal of Operational Research",
+    volume = "266",
+    number = "2",
+    pages = "609 - 621",
+    year = "2018",
+    doi = "10.1016/j.ejor.2017.10.039",
+    author = "Geraint I. Palmer and Paul R. Harper and Vincent A. Knight",
+}
+
+@article{Palmer2019,
+    author = {Geraint I. Palmer and Vincent A. Knight and Paul R. Harper and
+              Asyl L. Hawa},
+    title = {Ciw: An open-source discrete event simulation library},
+    journal = {Journal of Simulation},
+    volume = {13},
+    number = {1},
+    pages = {68-82},
+    year  = {2019},
+    doi = {10.1080/17477778.2018.1473909},
+}
+
+@article{Pampaka2016,
+    author = {Maria Pampaka and Graeme Hutcheson and Julian Williams},
+    title = {Handling missing data: analysis of a challenging data set using
+             multiple imputation},
+    journal = {International Journal of Research \& Method in Education},
+    volume = {39},
+    number = {1},
+    pages = {19-37},
+    year  = {2016},
+    doi = {10.1080/1743727X.2014.979146},
+}
+
+@article{Vuik2016a,
+    author = {Vuik, Sabine I. and Mayer, Erik K. and Darzi, Ara},
     year = {2016},
     pages = {},
     title = {A quantitative evidence base for population health: Applying
@@ -44,7 +234,7 @@
     doi = {10.1186/s12963-016-0115-z},
 }
 
-@article{VMD2016review,
+@article{Vuik2016b,
     author = {Vuik, Sabine I. and Mayer, Erik K. and Darzi, Ara},
     title = {Patient Segmentation Analysis Offers Significant Benefits For
              Integrated Care And Support},
@@ -56,7 +246,26 @@
     doi = {10.1377/hlthaff.2015.1311},
 }
 
-@article{YSKT+42019,
+@book{Wu2009,
+    title = {The top ten algorithms in data mining},
+    author = {Wu, Xindong and Kumar, Vipin},
+    year = {2009},
+    publisher = {CRC press},
+}
+
+@article{Yan2018,
+    title = {A systematic review of the clinical application of data-driven
+             population segmentation analysis},
+    journal = {BMC Medical Research Methodology},
+    volume = {18},
+    number = {121},
+    year = {2018},
+    doi = {10.1186/s12874-018-0584-9},
+    author = {Shi Yan and Yu Heng Kwan and Chuen Seng Tan and Julian Thumboo and
+              Lian Leng Low},
+}
+
+@article{Yan2019,
     title = {Identifying heterogeneous health profiles of primary care utilizers
              and their differential healthcare utilization and mortality – a
              retrospective cohort study},
@@ -64,12 +273,12 @@
     volume = {20},
     number = {54},
     year = {2019},
-    doi = {https://doi.org/10.1186/s12875-019-0939-2},
+    doi = {10.1186/s12875-019-0939-2},
     author = {Shi Yan and Benjamin Jun Jie Seng and Yu Heng Kwan and Chuen Seng
               Tan and Joanne Hui Min Quah and Julian Thumboo and Lian Leng Low},
 }
 
-@article{YGHT+12020,
+@article{Yoon2020,
     title = {Identifying Optimal Indicators and Purposes of Population
              Segmentation Through Engagement of Key Stakeholders: A Qualitative
              Study},
