--- a/main.tex
+++ b/main.tex
@@ -17,6 +17,9 @@
 \usepackage{caption}
 \usepackage{subcaption}
 
+% Mathematics
+\usepackage{amssymb}
+
 % Custom lengths
 \newlength{\imgwidth}
 \setlength{\imgwidth}{.96\textwidth}
