Move queuing refs to incomplete data subsec.

--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -86,16 +86,14 @@ well-defined label is of particular significance.
 
 \subsubsection{Handling incomplete data}
 
-This is a reference for the estimation of service times
-(theoretically)~\cite{Goldenshluger2016,Kumar2010}.
+These are references for the estimation of service times
+(theoretically)~\cite{Djabali2018,Goldenshluger2016,Kumar2010}.
 
 \subsubsection{Queuing models}
 
 These are the principal queuing theory works by
-Erlang~\cite{Erlang1917,Erlang1920}. This is a reference for the approximation
-of general service times using phase-type distributions in single-server
-queues~\cite{Djabali2018}. Deadlock is an aspect of applied queuing theory of
-interest in recent literature~\cite{Palmer2018}. The software used is
+Erlang~\cite{Erlang1917,Erlang1920}. Deadlock is an aspect of applied queuing
+theory of interest in recent literature~\cite{Palmer2018}. The software used is
 Ciw~\cite{Palmer2019}.
 
 % TODO Brief literature review of:
