--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,4 @@
-@article{RTC17,
+@article{Ramdas2017,
     title = {On {W}asserstein Two-Sample Testing and Related Families of
              Nonparametric Tests},
     author = {Aaditya Ramdas and Nicol\'{a}s Garc\'{i}a Trillos and Marco
@@ -9,4 +9,29 @@
     number = {2},
     pages = {47},
     doi = {10.3390/e19020047},
+}
+
+@article{Steins2013,
+    title = {A generic simulation model for planning critical care resource
+             requirements},
+    author = {Steins, Krisjanis and Walther, SM},
+    journal = {Anaesthesia},
+    volume = {68},
+    number = {11},
+    pages = {1148--1155},
+    year = {2013},
+}
+
+@article{Williams2015,
+    author = {Williams, J. and Dumont, S. and Parry-Jones, J. and Komenda, I.
+              and Griffiths, J. and Knight, V.},
+    title = {Mathematical modelling of patient flows to predict critical care
+             capacity required following the merger of two district general
+             hospitals into one},
+    journal = {Anaesthesia},
+    volume = {70},
+    number = {1},
+    pages = {32-40},
+    doi = {10.1111/anae.12839},
+    year = {2015},
 }
