Finish first draft of section.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,14 @@
+@article{Kullback1951,
+    author = "Kullback, S. and Leibler, R. A.",
+    doi = "10.1214/aoms/1177729694",
+    journal = "Annals of Mathematical Statistics",
+    number = "1",
+    pages = "79--86",
+    title = "On Information and Sufficiency",
+    volume = "22",
+    year = "1951"
+}
+
 @article{Ramdas2017,
     title = {On {W}asserstein Two-Sample Testing and Related Families of
              Nonparametric Tests},
