--- a/tex/comparison.tex
+++ b/tex/comparison.tex
@@ -1,13 +1,10 @@
-\begin{tabular}{lrrr}
+\begin{tabular}{lrrrrrrr}
 \toprule
-{} &    Observed &  Best simulated &  Worst simulated \\
+{} & \multicolumn{7}{l}{Summary statistic} \\
+{} &              mean &    std &   min &   25\% &   50\% &   75\% &     max \\
 \midrule
-mean &    7.702120 &        7.109257 &         4.363323 \\
-std  &   11.861053 &       12.413875 &        13.400991 \\
-min  &   -0.020833 &        0.000013 &         0.000007 \\
-25\%  &    1.491667 &        1.436432 &         0.719587 \\
-50\%  &    4.195139 &        3.552902 &         1.782643 \\
-75\%  &    8.930556 &        7.635822 &         3.844208 \\
-max  &  224.927778 &      244.455398 &       463.005915 \\
+Observed        &              7.70 &  11.86 & -0.02 &  1.49 &  4.20 &  8.93 &  224.93 \\
+Best simulated  &              7.11 &  12.41 &  0.00 &  1.44 &  3.55 &  7.64 &  244.46 \\
+Worst simulated &              4.36 &  13.40 &  0.00 &  0.72 &  1.78 &  3.84 &  463.01 \\
 \bottomrule
 \end{tabular}
